[gd_scene load_steps=10 format=2]

[ext_resource path="res://ARIBL0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Heart.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/Pixel Game UI/Assets/Hotbar_7.png" type="Texture" id=4]
[ext_resource path="res://art/Pixel Game UI/Assets/Hotbar_4.png" type="Texture" id=5]
[ext_resource path="res://art/Pixel Game UI/Assets/Hotbar_2.png" type="Texture" id=6]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )
Heart = ExtResource( 3 )

[node name="Debugmenu" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="coordLabel" type="Label" parent="Debugmenu"]
margin_right = 39.0
margin_bottom = 23.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(n,n)"

[node name="mobCountLabel" type="Label" parent="Debugmenu"]
visible = false
margin_top = 27.0
margin_right = 39.0
margin_bottom = 76.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0
"

[node name="PlayerHealth" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 20.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -76.0
margin_right = -830.0
margin_bottom = -57.0
rect_rotation = -90.0

[node name="GrappleReload" type="TextureProgress" parent="MarginContainer"]
margin_right = 184.0
margin_bottom = 19.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Hotbar" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -66.0
margin_right = -756.0
margin_bottom = -10.0

[node name="Background" type="TextureRect" parent="Hotbar"]
margin_right = 258.0
margin_bottom = 56.0
texture = ExtResource( 6 )
stretch_mode = 1

[node name="Inventory" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 39, 278 )

[node name="InventoryTimer" type="Timer" parent="Inventory"]
one_shot = true
